[Fix][Workspace] #22171 : added class for spacing and fixed position of share button

--- a/css/applications/_workspace.scss
+++ b/css/applications/_workspace.scss
@@ -1,7 +1,10 @@
 .workspace-share button.panel-button {
     position: absolute;
-    top: -60px;
+    top: -63px;
     right: 0;
+}
+.workspace-spacing {
+    line-height: 17px;
 }
 .workspace-app {
     .maxheight-minus350 {
